--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
+    "start": "react-scripts start && PORT=7070",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
